# skyblock-stats-bot

./: .gitignore  README.md  pyproject.toml
skyblock_stats_bot/: __main__.py
skyblock_stats_bot/config/: __init__.py
